# Crowscap

./: .gitignore  LICENSE  README.md  v0-fixes.patch
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: qwen_client.py  structured_outputs.py
backend/app/core/: admin_auth.py  auth.py  config.py  logging.py  rate_limit.py
backend/app/db/: models.py  schema.py  session.py  vector.py
backend/app/mcp/: __init__.py  formatters.py  server.py  tools.py
backend/app/schemas/: action.py  belief.py  capture.py  chat.py  job.py  memory.py  perspective.py  preference.py  recall.py  reminder.py  search.py  source.py
backend/app/services/: action_service.py  belief_audit_service.py  capture_service.py  chat_prompts.py  chat_service.py  chat_types.py  embedding_service.py  extraction_service.py  ingestion_service.py  job_service.py  memory_lifecycle_service.py  perspective_service.py  preference_service.py  public_search_service.py  recall_evaluation_service.py  recall_service.py  relationship_service.py  reminder_service.py  safety_service.py  (+1 more)
backend/scripts/: backfill_pgvector.py  check_postgres.py  demo_agent.py  init_db.py  migrate_sqlite_to_postgres.py  qwen_smoke.py  run.py
backend/tests/: test_belief_audit.py  test_captures.py  test_chat.py  test_error_handling.py  test_health.py  test_ingestion.py  test_lifecycle_actions_jobs.py  test_mcp_tools.py  test_public_search.py  test_qwen_client.py  test_rate_limit.py  test_recalls.py  test_relationships.py  test_safety.py  test_search.py  test_structured_outputs.py
(+75 files in other folders)
