[project]
name = "crowscap-backend"
version = "0.1.0"
description = "FastAPI backend for the Crowscap memory agent."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mcp>=1.28.1",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pymupdf>=1.27.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "trafilatura>=2.1.0",
  "uvicorn[standard]>=0.30.0",
  "yt-dlp>=2026.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
